# xl-reports

./: .flake8  LICENSE  README.md  pyproject.toml  xl_reports.py
tests/: sample.xlsx  test.xlsx  test_xl_reports.py
