[tool.poetry]
name = "xl-reports"
version = "0.1.3"
description = "Generate reports from a excel file and some data."
authors = ["Dustin Sampson <dustin@sparkgeo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sparkgeo/xl-reports"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.10"
mypy = "^0.971"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"